# university-labs

./: README.md
fem_solid_mechanics/fem_processor_analysis/: fem_rigid_body_motion.py
fem_solid_mechanics/shell_element_stress_analysis/: README.md  integrals.cpp  integrals.h  main.cpp
geometric_modeling/architectural_projection/: Architectural_Projection.sln
geometric_modeling/architectural_projection/lab2_projection/: Architectural_Projection.csproj  Form1.Designer.cs  Form1.cs  Program.cs  matrix.cs  mesh.cs
geometric_modeling/crystal_growth_simulator/: CrystalGrowthSimulator.csproj  CrystalGrowthSimulator.sln  MainForm.Designer.cs  MainForm.cs  Program.cs
geometric_modeling/crystal_growth_simulator/Models/: CrystalCluster.cs  RealCrystal.cs
geometric_modeling/crystal_growth_simulator/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
geometric_modeling/crystal_growth_simulator/Renderers/: SceneRenderer.cs
geometric_modeling/epicycloid_project/: EpicycloidProject.csproj  EpicycloidProject.sln  Form1.Designer.cs  Form1.cs  Program.cs
geometric_modeling/epicycloid_project/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
numerical_methods/: CMakeLists.txt  main.py  start_main.sh
numerical_methods/bridge/: bridge.vcxproj  numerical_bridge.cpp  numerical_bridge.h
numerical_methods/bridge/cpp/: pybind_wrapper.cpp
numerical_methods/core/common/: constants.h  math_utils.h
numerical_methods/core/data/: solution_data.cpp  solution_data.h  task_data.h
numerical_methods/core/problems/: differential_equation.h  main_problem.cpp  main_problem.h  test_problem.cpp  test_problem.h
numerical_methods/core/solvers/: differential_coefficients.cpp  differential_coefficients.h  finite_difference_solver.cpp  finite_difference_solver.h  tridiagonal_solver.cpp  tridiagonal_solver.h
numerical_methods/finite_difference/: .gitignore  CMakeLists.txt  README.md  main.py  start_main.sh
numerical_methods/finite_difference/bridge/cpp/: pybind_wrapper.cpp
numerical_methods/finite_difference/bridge/python/: __init__.py  solver_bridge.py
numerical_methods/finite_difference/core/problems/: differential_equation.h  main_problem.cpp  main_problem.h  test_problem.h
numerical_methods/finite_difference/core/solvers/: differential_coefficients.h  finite_difference_solver.h  tridiagonal_solver.h
numerical_methods/finite_difference/ui/: interface.py
numerical_methods/finite_difference/ui/analytics/: __init__.py
numerical_methods/runge_kutta_suite/: CMakeLists.txt  README.md  app.py  run-app.sh
numerical_methods/runge_kutta_suite/bridge/: pybind_wrapper.cpp
numerical_methods/runge_kutta_suite/core/: numerical_methods.cpp  numerical_methods.h  solver.cpp  solver.h
numerical_methods/runge_kutta_suite/ui/: __init__.py  interface.py
numerical_methods/runge_kutta_suite/ui/analytics/: __init__.py  analyzer.py
numerical_methods/runge_kutta_suite/ui/visualization/: __init__.py  plotter.py
numerical_methods/ui/: __init__.py  interface.py  program.cs
numerical_methods/ui/analytics/: analyzer.py
numerical_methods/ui/models/: data_point.cs
numerical_methods/ui/services/: inumerical_service.cs  numerical_service.cs
numerical_methods/ui/viewmodels/: main_viewmodel.cs
numerical_methods/ui/views/: main_form.cs
numerical_methods/ui/visualization/: __init__.py  plotter.py
probability_and_statistics/linear_regression/: README.md
probability_and_statistics/linear_regression/analyze_real_data/: analyze_real_data.py
probability_and_statistics/modeling_random_variables/: README.md  telephone_exchange.py
probability_and_statistics/monte_carlo_method/: README.md  area_calculation.py  binary_sequence_generator.py  random_walk_analysis.py
(+5 files in other folders)
